Decrement egress counter when scoped connection not returned to the pool

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.2, v4.0, v3.6, v3.4
    • Service Arch 2019-03-11, Service Arch 2019-03-25, Service Arch 2019-04-08, Service Arch 2019-06-17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      this code calls kill() in certain cases and done() in others. Only done() decrements the _checkedOut value.

      The result is that openConnections() rises inaccurately over time.

      The inaccurate reporting was observed on 3.6.7 but code appears unchanged since. It's understood that PM-1121 may eventually obviate this pool but it may not be a difficult fix in the interim.

            Assignee:
            Rahul Sundararaman (Inactive)
            Reporter:
            Eric Sedor
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: