SERVER-39642 Decrement egress counter when scoped connection not returned to the pool